--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,46 @@
 
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
+    <%# Include JavaScript via importmap %>
+    <%= javascript_importmap_tags %>
+
+    <!-- Bootstrap 5 CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
 
   <body>
-    <% flash.each do |type, message| %>
-      <div class="alert alert-<%= type == 'notice' ? 'success' : 'danger' %>">
-        <%= message %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+      <div class="container">
+        <%= link_to "Mi Biblioteca", root_path, class: "navbar-brand" %>
+        <div class="navbar-nav me-auto">
+          <% if user_signed_in? %>
+            <%= link_to "Librería", libreria_libros_path, class: "nav-link" %>
+            <%= link_to "Notas", notas_libros_path, class: "nav-link" %>
+          <% end %>
+        </div>
+        <div class="navbar-nav ms-auto">
+          <% if user_signed_in? %>
+            <span class="navbar-text me-3">Hola, <%= current_user.email %></span>
+            <%= button_to "Cerrar Sesión", destroy_user_session_path, method: :delete, 
+                          class: "btn btn-outline-light btn-sm" %>
+          <% else %>
+            <%= link_to "Iniciar Sesión", new_user_session_path, class: "btn btn-outline-light btn-sm me-2" %>
+            <%= link_to "Registrarse", new_user_registration_path, class: "btn btn-light btn-sm" %>
+          <% end %>
+        </div>
       </div>
-    <% end %>
-    <%= yield %>
+    </nav>
+
+    <div class="container">
+      <% flash.each do |type, message| %>
+        <div class="alert alert-<%= type == 'notice' ? 'success' : 'danger' %> alert-dismissible fade show">
+          <%= message %>
+          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+        </div>
+      <% end %>
+      <%= yield %>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
