--- a/app/views/libros/new.html.erb
+++ b/app/views/libros/new.html.erb
@@ -1,8 +1,8 @@
-<h1>Agregar Nuevo Libro</h1>
+<h1 class="mb-4 text-primary text-center fw-light">Agregar Nuevo Libro</h1>
 
 <% if @libro.errors.any? %>
   <div class="alert alert-danger">
-    <ul>
+    <ul class="mb-0">
       <% @libro.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
@@ -10,22 +10,27 @@
   </div>
 <% end %>
 
-<%= form_with(model: @libro, local: true) do |f| %>
-  <%= f.label :titulo %>
-  <%= f.text_field :titulo %>
+<div class="card shadow-sm mx-auto" style="max-width: 500px;">
+  <div class="card-body">
+    <%= form_with(model: @libro, local: true) do |f| %>
+      <div class="mb-3">
+        <%= f.label :titulo, class: "form-label fw-semibold text-primary" %>
+        <%= f.text_field :titulo, class: "form-control" %>
+      </div>
 
-  <%= f.label :autor %>
-  <%= f.text_field :autor %>
+      <div class="mb-3">
+        <%= f.label :autor, class: "form-label fw-semibold text-primary" %>
+        <%= f.text_field :autor, class: "form-control" %>
+      </div>
 
-  <%= f.label :paginas %>
-  <%= f.number_field :paginas %>
+      <div class="mb-3">
+        <%= f.label :pdf, "Subir PDF", class: "form-label fw-semibold text-primary" %>
+        <%= f.file_field :pdf, class: "form-control" %>
+      </div>
 
-  <%= f.label :estado %>
-  <%= f.select :estado, Libro.estados.keys.map { |e| [e.humanize, e] } %>
-
-  <%= f.label :pdf, "Subir PDF" %>
-  <%= f.file_field :pdf %>
-
-  <%= f.submit "Agregar Libro" %>
-<% end %>
-<%= link_to "Volver a Mis Libros", libros_path, class: "btn btn-secondary" %>
+      <div class="d-grid gap-2">
+        <%= f.submit "Agregar Libro", class: "btn btn-primary" %>
+      </div>
+    <% end %>
+    <div class="mt-3 text-center">
+      <%= link_to "Volver a Mis Libros", libros_path, class: "btn btn-outline-primary btn-sm" %>
