--- a/app/views/libros/index.html.erb
+++ b/app/views/libros/index.html.erb
@@ -40,6 +40,6 @@
 
   <div class="text-center mt-3">
     <%= link_to "Subir Libro", new_libro_path, class: "btn btn-primary" %>
-    <%= link_to "Agregar desde librería", libreria_libros_path, class: "btn btn-primary" %>
+    <%= link_to "Agregar libro desde librería", libreria_libros_path, class: "btn btn-primary" %>
   </div>
 <% end %>
